Fix formatting on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -12760,3 +12760,38 @@ header.masthead .bg-circle-4 {
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.custom-p-large {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.custom-p-all {
+  padding: 1rem;
+}
+
+@media (min-width: 992px) {
+  .custom-p {
+    padding-left: 3em;
+    padding-right: 3em;
+  }
+
+  .custom-p-large {
+    padding-left: 12em;
+    padding-right: 12em;
+  }
+
+  .custom-p-all {
+    padding: 3rem;
+  }
+
+  .custom-g {
+    --bs-gutter-x: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .btn-xl {
+    padding: 1rem 2rem;
+  }
+}
